--- a/src/App.css
+++ b/src/App.css
@@ -4,22 +4,24 @@
     font-style: normal;
     font-weight: normal;
     src: local('SEGA LOGO FONT'), url('SEGA.woff') format('woff');
-    }
+}
+h1,h3 {
+    font-family: 'SEGA LOGO FONT';
+    
+    color:rgba(231, 59, 56, 0.8);
+}
 .loader {
     border: 16px solid #f3f3f3; /* Light grey */
     border-top: 16px solid #3498db; /* Blue */
     border-radius: 50%;
     width: 120px;
     height: 120px;
+    margin: auto;
+    font-size: smaller;
     animation: spin 2s linear infinite;
 }
 
 @keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
-}
-h1 {
-    font-family: 'SEGA LOGO FONT';
-    font-weight: 200%;
-    color:rgb(231,58,56);
 }
